# reality-glitch-studio

./: .gitignore  LICENSE  README.md  app.py  effects.py  main.py  pyproject.toml
.github/workflows/: ci.yml
src/reality_glitch/: container.py
src/reality_glitch/domain/: __init__.py  exceptions.py  models.py  ports.py
src/reality_glitch/effects/: __init__.py  base.py  center_bulge.py  center_pinch.py  circular_ripple.py  double_exposure.py  glitch.py  grayscale.py  kaleidoscope.py  local_distortion.py  local_twirl.py  mirror.py  mosaic.py  palette_transplant.py  pixel_sort.py  portal.py  retro_crt.py  rgb_split.py  sampling.py  swirl.py  wave.py
src/reality_glitch/infrastructure/: __init__.py  presets.py  registry.py
src/reality_glitch/services/: __init__.py  animation_service.py  export_service.py  image_service.py  mask_service.py  pipeline_service.py  preset_blend_service.py
src/reality_glitch/ui/: controls.py  state.py  styles.py
tests/: conftest.py  test_animation_service.py  test_container.py  test_effects.py  test_export_service.py  test_image_service.py  test_mask_service.py  test_models.py  test_pipeline_service.py  test_preset_blend_service.py  test_presets.py  test_registry.py  test_streamlit_state_regression.py  test_ui_regressions.py
